--- a/client/src/stylesSass/_global.scss
+++ b/client/src/stylesSass/_global.scss
@@ -67,3 +67,7 @@ code {
         background-color: $color-text-hint-hover-active;
     }
 }
+
+.Toastify__toast-theme--dark {
+    font-size: 1.4rem;
+}
