--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -13,3 +13,11 @@ $color-text-hint-hover: #eaedf1;
 $color-text-hint-hover-active: rgb(222, 224, 226);
 
 $border-color: rgb(203 213 225);
+
+
+// Reponsive
+$VXS: 321px;
+$XS: 479px;
+$SM: 767px;
+$MD: 1023px;
+$XL: 1169px;
