--- a/client/src/components/auth/auth.scss
+++ b/client/src/components/auth/auth.scss
@@ -86,8 +86,8 @@
         &-content {
             padding: 0 110px;
             & h2 {
-                font-size: 2.4rem;
-                margin-top: 10px;
+                font-size: 3.4rem;
+                margin-bottom: 10px;
             }
             & p {
                 font-size: 1.4rem;
@@ -119,5 +119,41 @@
             right: 0px;
             top: -10px;
         }
+    }
+    @include MediaQuery(MD) {
+        & {
+            flex-wrap: wrap;
+        }
+        &__form {
+            width: 100%;
+            align-items: center;
+            &-wrapper {
+                margin-top: -100px;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                width: 400px;
+                padding: 0 20px;
+                & form {
+                    width: 100%;
+                }
+            }
+        }
+        &__background {
+            display: none;
+        }
+    }
+    @include MediaQuery(XS) {    
+        &__form {           
+            padding: 0px;
+            &-wrapper {         
+                width: 100%;
+                padding: 0 40px;
+                & form {
+                    width: 100%;
+                }
+            }
+        }       
     }
 }
