--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -2,18 +2,19 @@ $color-primary: #473fce;
 $color-primary-light: #5f59ca;
 $color-primary-dark: #2f26d3;
 $color-primary-text: rgb(99, 102, 241);
+$color-primary-text-light: rgb(129, 140, 248);
 
 $color-white: #fff;
 $color-dark: #000;
 $color-dander: #dc2626;
 
 $color-text: #1e293b;
+$color-text-secondary: rgb(148, 163, 184);
 $color-text-hint: rgb(148, 163, 184);
 $color-text-hint-hover: #eaedf1;
 $color-text-hint-hover-active: rgb(222, 224, 226);
 
 $border-color: rgb(203 213 225);
-
 
 // Reponsive
 $VXS: 321px;
