--- a/client/src/components/globals/SideBar.scss
+++ b/client/src/components/globals/SideBar.scss
@@ -1,6 +1,6 @@
 @import "../../stylesSass/variables";
 .side-bar {
-    width: 280px;
+    width: $width-sidebar;
     position: fixed;
     top: 0;
     left: 0;
@@ -77,7 +77,7 @@
                     width: 100%;
                     padding: 0 12px;
                     border-radius: 5px;
-                    transition: all .05s ease-in-out;
+                    transition: all 0.05s ease-in-out;
                     &:hover {
                         background-color: rgb(255 255 255 / 0.12);
                     }
@@ -85,7 +85,7 @@
                         & a {
                             color: $color-white;
                         }
-                        &i {
+                        & i {
                             color: $color-white;
                         }
                         & {
@@ -95,18 +95,18 @@
                     & a {
                         font-size: 1.3rem;
                         font-weight: 500;
-                        color: rgb(226 232 240);
+                        color: rgb(169, 175, 182);
                         text-decoration: none;
                         height: 100%;
                         width: 100%;
                         display: flex;
                         align-items: center;
-
+                        cursor: pointer;
                         & i {
                             margin-top: 2px;
                             font-size: 2.2rem;
                             margin-right: 10px;
-                            color: rgb(226 232 240);
+                            color: rgb(169, 175, 182);
                         }
                     }
                 }
