--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -22,3 +22,6 @@ $XS: 479px;
 $SM: 767px;
 $MD: 1023px;
 $XL: 1169px;
+
+$width-sidebar: 280px;
+$box-shadow-1: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
