--- a/client/src/components/globals/SideBar.scss
+++ b/client/src/components/globals/SideBar.scss
@@ -1,4 +1,5 @@
 @import "../../stylesSass/variables";
+@import "../../stylesSass/mixin";
 .side-bar {
     width: $width-sidebar;
     position: fixed;
@@ -6,6 +7,24 @@
     left: 0;
     min-height: 100vh;
     background-color: #0f172a;
+    transition: left 0.4s ease-in-out !important;
+    z-index: 999;
+    &__fade {
+        position: fixed;
+        top: 0;
+        left: $width-sidebar;
+        width: calc(100% - $width-sidebar);
+        min-height: 100vh;
+        background-color: rgb(0 0 0 / 0.12);
+        z-index: 999;
+        visibility: hidden;
+        transition: all .5s linear;
+    }
+    &--right {
+        transition: left 0.8s ease-in-out !important;
+        left: -100%;
+    }
+
     &__header {
         padding: 1.6rem;
         display: flex;
@@ -111,6 +130,13 @@
                     }
                 }
             }
+        }
+    }
+
+    @include MediaQuery(MD) {
+        &__fade{
+            visibility: visible;
+            // transition: all 2s ease-in-out !important;
         }
     }
 }
