--- a/client/src/stylesSass/_global.scss
+++ b/client/src/stylesSass/_global.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./mixin";
 * {
     box-sizing: border-box;
     margin: 0;
@@ -70,4 +71,16 @@ code {
 
 .Toastify__toast-theme--dark {
     font-size: 1.4rem;
+}
+
+.main {
+    transition: padding 0.4s ease-in-out;
+}
+
+@include MediaQuery(MD) {
+    .main {
+        &.pd-left {
+            padding-left: 0px;
+        }
+    }
 }
