--- a/client/src/components/globals/global-loading/GlobalLoading.scss
+++ b/client/src/components/globals/global-loading/GlobalLoading.scss
@@ -1,4 +1,4 @@
-@import "../../stylesSass/variables";
+@import "../../../stylesSass/variables";
 .global-loading {
     position: fixed;
     z-index: 999;
