--- a/client/src/components/globals/side-bar/SideBar.scss
+++ b/client/src/components/globals/side-bar/SideBar.scss
@@ -1,5 +1,5 @@
-@import "../../stylesSass/variables";
-@import "../../stylesSass/mixin";
+@import "../../../stylesSass/variables";
+@import "../../../stylesSass/mixin";
 .side-bar {
     width: $width-sidebar;
     position: fixed;
