--- a/client/src/components/globals/side-bar/SideBar.scss
+++ b/client/src/components/globals/side-bar/SideBar.scss
@@ -7,7 +7,7 @@
     left: 0;
     min-height: 100vh;
     background-color: #0f172a;
-    transition: left 0.4s ease-in-out !important;
+    transition: left 0.3s ease-in-out !important;
     z-index: 999;
     &__fade {
         position: fixed;
@@ -17,8 +17,9 @@
         min-height: 100vh;
         background-color: rgb(0 0 0 / 0.12);
         z-index: 999;
+        opacity: 0;
         visibility: hidden;
-        transition: all .5s linear;
+        transition: all 0.4s ease-in-out !important;
     }
     &--right {
         transition: left 0.8s ease-in-out !important;
@@ -134,9 +135,10 @@
     }
 
     @include MediaQuery(MD) {
-        &__fade{
+        &__fade.active{
+            opacity: 1;
             visibility: visible;
-            // transition: all 2s ease-in-out !important;
+            transition: all 0.7s ease-in-out !important;
         }
     }
 }
