--- a/client/src/pages/index.scss
+++ b/client/src/pages/index.scss
@@ -1,6 +1,7 @@
 @import "../stylesSass/variables";
-.dashbroad {
+@import "../stylesSass/mixin";
 
+.dashbroad {
     &__header {
         display: flex;
         align-items: center;
@@ -59,6 +60,7 @@
             display: flex;
             flex-wrap: wrap;
             padding: 30px;
+            margin-left: -30px;
             & .box-item {
                 width: calc(25% - 30px);
                 height: 200px;
@@ -83,15 +85,40 @@
                 &:first-child {
                     color: #3b82f6;
                 }
-                &:nth-child(2){
+                &:nth-child(2) {
                     color: #ef4444;
-                }   
-                &:nth-child(3){
+                }
+                &:nth-child(3) {
                     color: #f59e0b;
-                } 
-                &:nth-child(4){
+                }
+                &:nth-child(4) {
                     color: #22c55e;
-                }          
+                }
+            }
+        }
+    }
+    @include MediaQuery(MD) {
+        &__body {
+            &-box {
+                & .box-item {
+                    width: calc(50% - 30px);
+                }
+            }
+        }
+    }
+    @include MediaQuery(SM) {
+        &__user {
+            &-infor {
+                & .infor__name {
+                    font-size: 2.4rem;
+                }
+            }
+        }
+        &__body {
+            &-box {
+                & .box-item {
+                    width: calc(100% - 30px);
+                }
             }
         }
     }
