--- a/client/src/components/globals/side-bar/SideBar.scss
+++ b/client/src/components/globals/side-bar/SideBar.scss
@@ -48,7 +48,8 @@
             width: 100px;
             height: 100px;
             object-fit: cover;
-            margin-bottom: 20px;
+            margin-bottom: 20px;            
+            border-radius: 50%;
         }
         &-name {
             font-size: 1.4rem;
