--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -25,3 +25,6 @@ $XL: 1169px;
 
 $width-sidebar: 280px;
 $box-shadow-1: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+$height-top-header: 60px;
+$height-top-user: 200px;
+$height-body: calc(100vh - 200px - 60px - 2px - 2px);
