add time to dashbroad header

--- a/client/src/pages/index.scss
+++ b/client/src/pages/index.scss
@@ -22,6 +22,7 @@
         box-shadow: $box-shadow-1;
         margin-bottom: 2px;
         background-color: $color-white;
+        justify-content: space-between;
         &-infor {
             display: flex;
             align-items: center;
@@ -49,6 +50,27 @@
                 & span {
                     font-size: 1.4rem;
                     line-height: 2rem;
+                }
+            }
+        }
+        &-time {
+            img {
+                width: 40px;
+                object-fit: cover;
+            }
+            & .time__box {
+                display: flex;
+                align-items: center;
+                &-text {
+                    display: flex;
+                    flex-direction: column;
+                    & span {
+                        font-size: 1.4rem;
+                        font-weight: 600;
+                        color: rgb(104, 104, 104);
+                        margin-right: 4px;
+                        display: block;
+                    }
                 }
             }
         }
