--- a/client/src/components/globals/side-bar/SideBar.scss
+++ b/client/src/components/globals/side-bar/SideBar.scss
@@ -113,7 +113,7 @@
                             background-color: rgb(255 255 255 / 0.12);
                         }
                     }
-                    & a {
+                    & a,div {
                         font-size: 1.3rem;
                         font-weight: 500;
                         color: rgb(169, 175, 182);
