--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -26,5 +26,5 @@ $XL: 1169px;
 $width-sidebar: 280px;
 $box-shadow-1: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 $height-top-header: 60px;
-$height-top-user: 200px;
-$height-body: calc(100vh - 200px - 60px - 2px - 2px);
+$height-top-user: 150px;
+$height-body: calc(100vh - $height-top-user - $height-top-header - 2px - 2px);
