course page p4:sorting and searching

--- a/client/src/components/course/CourseBody.scss
+++ b/client/src/components/course/CourseBody.scss
@@ -3,6 +3,9 @@
 
 .course__body {
     padding: 20px;
+    & .course-name{
+        min-width: 200px !important;
+    }
     & .course__control {
         display: flex;
         justify-content: space-between;
