--- a/client/src/stylesSass/_utils.scss
+++ b/client/src/stylesSass/_utils.scss
@@ -5,6 +5,10 @@
     padding-left: $width-sidebar;
 }
 
+.pd-top{
+    padding-top: $height-top-header;
+}
+
 // date picker
 .css-l0iinn {
     font-size: 1.4rem !important;
