--- a/client/src/stylesSass/_typography.scss
+++ b/client/src/stylesSass/_typography.scss
@@ -20,3 +20,9 @@
     color: $color-dander;
     margin-top: 5px;
 }
+
+.loading-text{
+    color: $color-primary;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
