--- a/client/src/components/course/CourseFormModal.scss
+++ b/client/src/components/course/CourseFormModal.scss
@@ -15,14 +15,29 @@
         & select {
             @include inputStyle;
         }
+        & textarea {
+            @include inputStyle;
+            padding-top: 12px ;
+            padding-bottom: 12px;
+            resize: vertical;
+        }
+
         &--row {
             justify-content: space-between;
             flex-direction: row;
             & .form-group__row {
                 display: flex;
-                flex-direction: column;                
+                flex-direction: column;
                 width: 48%;
             }
+        }
+    }
+    &-modal {
+        .MuiBackdrop-root.css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop {
+            background-color: rgba($color: #000000, $alpha: 0.3);
+        }
+        .MuiBox-root.css-xqly9z {
+            box-shadow: $box-shadow-1;
         }
     }
 }
