--- a/client/src/components/course/CourseFormModal.scss
+++ b/client/src/components/course/CourseFormModal.scss
@@ -17,7 +17,7 @@
         }
         & textarea {
             @include inputStyle;
-            padding-top: 12px ;
+            padding-top: 12px;
             padding-bottom: 12px;
             resize: vertical;
         }
@@ -38,6 +38,15 @@
         }
         .MuiBox-root.css-xqly9z {
             box-shadow: $box-shadow-1;
+        }
+    }
+
+    @include MediaQuery(SM) {
+        &-modal {          
+            .MuiBox-root.css-xqly9z {
+                box-shadow: $box-shadow-1;
+                width: 90%;
+            }
         }
     }
 }
