--- a/client/src/components/globals/side-bar/SideBar.scss
+++ b/client/src/components/globals/side-bar/SideBar.scss
@@ -19,10 +19,10 @@
         z-index: 999;
         opacity: 0;
         visibility: hidden;
-        transition: all 0.4s ease-in-out !important;
+        transition: all 0.3s ease-in-out !important;
     }
     &--right {
-        transition: left 0.8s ease-in-out !important;
+        transition: left 0.6s ease-in-out !important;
         left: -100%;
     }
 
@@ -30,11 +30,13 @@
         padding: 1.6rem;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         min-width: 50px;
         &-logo {
             width: 50px;
             height: 50px;
             object-fit: cover;
+            border-radius: 50%;
         }
     }
     &__infor {
