--- a/client/src/stylesSass/_typography.scss
+++ b/client/src/stylesSass/_typography.scss
@@ -21,8 +21,14 @@
     margin-top: 5px;
 }
 
-.loading-text{
+.loading-text {
     color: $color-primary;
     font-size: 1.3rem;
     font-weight: 600;
+}
+
+.mui-text-btn {
+    font-size: 1.3rem;
+    text-transform: capitalize;
+    font-family: $font-family-primary;
 }
