--- a/client/src/stylesSass/_variables.scss
+++ b/client/src/stylesSass/_variables.scss
@@ -1,3 +1,6 @@
+$font-family-primary: -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+
 $color-primary: #473fce;
 $color-primary-light: #5f59ca;
 $color-primary-dark: #2f26d3;
@@ -9,6 +12,7 @@ $color-dark: #000;
 $color-dander: #dc2626;
 
 $color-text: #1e293b;
+$color-text-2: #64748b;
 $color-text-secondary: rgb(148, 163, 184);
 
 $color-text-hint: rgb(148, 163, 184);
@@ -30,3 +34,4 @@ $box-shadow-2: 0 2px 6px 0 rgb(0 0 0 / 0.15), 0 2px 4px -2px rgb(0 0 0 / 0.15);
 $height-top-header: 60px;
 $height-top-user: 150px;
 $height-body: calc(100vh - $height-top-user - $height-top-header - 2px - 2px);
+$height-body-xl: calc(100vh - $height-top-header - 2px - 2px);
