--- a/client/src/components/course/CourseCard.scss
+++ b/client/src/components/course/CourseCard.scss
@@ -24,8 +24,8 @@
                 }
                 & h2 {
                     font-size: 2.8rem;
-                    font-weight: 500;
-                    color: $color-text-2;
+                    font-weight: 600;
+                    color: $color-primary;
                     text-transform: uppercase;
                     display: block;
                     display: -webkit-box;
@@ -37,12 +37,12 @@
                 }
                 & span {
                     font-size: 1.4rem;
-                    font-weight: 500;
+                    font-weight: 600;
                     color: $color-text-2;
                 }
                 & p {
                     font-size: 1.4rem;
-                    font-weight: 500;
+                    font-weight: 600;
                     color: $color-text;
                 }
             }
@@ -91,9 +91,9 @@
 
     &-desc {
         padding: 0 65px;
-        margin-top: 10px;
+        margin-top: 30px;
         & h3 {
-            font-size: 2rem;
+            font-size: 2.2rem;
             margin-bottom: 5px;
             color: $color-text;
         }
@@ -101,6 +101,16 @@
             font-size: 1.4rem;
             font-weight: 500;
             line-height: 2rem;
+        }
+    }
+
+    &-student {
+        padding: 0 65px;
+        margin-top: 30px;
+        & h3 {
+            font-size: 2.2rem;
+            margin-bottom: 5px;
+            color: $color-text;
         }
     }
 
@@ -170,6 +180,9 @@
             }
         }
         &-desc {
+            padding: 0px 20px;
+        }
+        &-student {
             padding: 0px 20px;
         }
     }
