--- a/client/src/stylesSass/_global.scss
+++ b/client/src/stylesSass/_global.scss
@@ -84,6 +84,10 @@ code {
     transition: padding 0.4s ease-in-out;
 }
 
+.MuiButton-containedPrimary{
+    background-color: $color-primary !important;
+}
+
 @include MediaQuery(MD) {
     .main {
         &.pd-left {
