--- a/client/src/components/lesson/LessonBody.scss
+++ b/client/src/components/lesson/LessonBody.scss
@@ -3,11 +3,12 @@
 .lesson__body {
     padding: 20px;
     &-control {
+        padding: 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
         padding: 16px;
         min-height: 65px;
         background-color: $color-white;
@@ -18,27 +19,159 @@
             & .form-group {
                 display: flex;
                 align-items: center;
-                height: 36px;
+                height: 46px;
                 margin-right: 20px;
                 position: relative;
-                width: 230px;
+                width: 330px;
                 & input {
                     position: absolute;
                     z-index: 9;
                     width: 100%;
                     margin-right: 5px;
                     @include inputStyle;
-                    min-height: 40px;
-                    padding-right: 25px !important;
-                    padding-left: 10px;
+                    min-height: 46px;
+                    padding-left: 40px !important;
+                    padding-right: 10px;
                     font-size: 1.5rem;
+                    color: $color-text;
                 }
                 & i {
                     font-size: 1.8rem;
                     color: $color-text-secondary;
                     position: absolute;
                     z-index: 10;
-                    right: 5px;
+                    left: 15px;
+                }
+            }
+        }
+    }
+    &-list {
+        & .list__row {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -25px;
+            &-item {
+                width: calc(25% - 25px);
+                margin-left: 25px;
+                margin-bottom: 25px;
+                background-color: $color-white;
+                box-shadow: $box-shadow-1;
+                border-radius: 15px;
+                display: flex;
+                flex-direction: column;
+                padding: 20px 0px;
+                & .item__heading {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-bottom: 10px;
+                    padding: 0px 20px;
+                    & span {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 4px 12px;
+                        font-size: 1.5rem;
+                        font-weight: 600;
+                        border-radius: 9999px;
+                        &.student-10 {
+                            background-color: rgb(252 231 243);
+                            color: rgb(157 23 77);
+                        }
+                        &.student-20 {
+                            background-color: rgb(219 234 254);
+                            color: rgb(30 64 175);
+                        }
+                        &.student-30 {
+                            background-color: rgb(220 252 231);
+                            color: rgb(22 101 52);
+                        }
+                        &.student-40 {
+                            color: rgb(146 64 14);
+                            background-color: rgb(254 243 199);
+                        }
+                    }
+                }
+
+                & .item__infor {
+                    height: 80px;
+                    padding: 0px 20px;
+                    &-name {
+                        font-size: 1.6rem;
+                        font-weight: 600;
+                        color: $color-text;
+                        display: block;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        word-wrap: break-word;
+                        margin-bottom: 5px;
+                        & span {
+                            margin: 0px !important;
+                            color: $color-primary !important;
+                            font-size: 1.6rem !important;
+                            font-weight: 600 !important;
+                            margin-right: 5px !important;
+                        }
+                    }
+                    & span {
+                        font-size: 1.3rem;
+                        font-weight: 500;
+                        color: $color-text-2;
+                        margin-right: 10px;
+                        margin-bottom: 20px;
+                        display: inline-block;
+                    }
+                }
+
+                & .item__indicator {
+                    display: block;
+                    width: 40px;
+                    height: 1.5px;
+                    margin: 1.5rem 20px;
+                    background-color: rgb(226, 232, 240);
+                }
+
+                & .item__bottom {
+                    padding: 0px 20px;
+                    flex: 1;
+                    & div {
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 8px;
+                        & i {
+                            font-size: 2rem;
+                            color: $color-text-secondary;
+                            margin-right: 10px;
+                        }
+                        & span {
+                            font-size: 1.3rem;
+                        }
+                    }
+                }
+                & .item__line {
+                    width: 100%;
+                    height: 2px;
+                    margin: 1.5rem 0px;
+                    background-color: rgba($color-primary-light, 0.3);
+                }
+                & .item__button {
+                    padding: 0 20px;
+                    display: flex;
+                    justify-content: flex-end;
+                    & button {
+                        width: 125px;
+                        min-width: 64px;
+                        height: 40px;
+                    }
+                    & i{
+                        font-size: 2rem;
+                        margin-top: 2px;
+                        margin-left: 5px;
+                    }
                 }
             }
         }
@@ -46,16 +179,16 @@
 
     @include MediaQuery(MD) {
         &-control {
-            flex-direction: column;            
-            & form{
+            flex-direction: column;
+            & form {
                 width: 100%;
-                & .form-group{
+                & .form-group {
                     width: 100%;
                     margin-bottom: 10px;
                     & i {
                         right: 15px;
                     }
-                    & input{
+                    & input {
                         padding-right: 40px !important;
                     }
                 }
