--- a/client/src/components/lesson/LessonBody.scss
+++ b/client/src/components/lesson/LessonBody.scss
@@ -34,6 +34,7 @@
                     padding-right: 10px;
                     font-size: 1.5rem;
                     color: $color-text;
+                    z-index: 11;
                 }
                 & i {
                     font-size: 1.8rem;
