--- a/client/src/stylesSass/_typography.scss
+++ b/client/src/stylesSass/_typography.scss
@@ -26,6 +26,11 @@
     font-weight: 600;
 }
 
+.button-text{
+    font-size: 1.2rem !important;
+    text-transform: initial !important;
+}
+
 .mui-text-btn {
     font-size: 1.3rem;
     text-transform: capitalize;
