--- a/client/src/pages/roll-call-session/RollCallSessionDetail.scss
+++ b/client/src/pages/roll-call-session/RollCallSessionDetail.scss
@@ -33,7 +33,18 @@
 
         & .header__right {
             display: flex;
-
+            align-items: center;
+            & h2 {
+                color: crimson;
+                font-size: 1.8rem;
+                display: flex;
+                align-content: center;
+                & i {
+                    font-size: 2rem;
+                    margin-right: 2px;
+                    margin-top: 1px;
+                }
+            }
             & div {
                 margin-left: 10px;
                 & > button {
