update information and reponsive  roll call session card

--- a/client/src/components/roll-call-session/AttendanceDetailRow.scss
+++ b/client/src/components/roll-call-session/AttendanceDetailRow.scss
@@ -27,4 +27,12 @@
             font-size: 1.4rem;
         }
     }
+
+    @include MediaQuery(MD){
+        &-note {
+            & textarea {
+                width: 150px !important;
+            }
+        }
+    }
 }
