--- a/client/src/components/lesson/LessonCard.scss
+++ b/client/src/components/lesson/LessonCard.scss
@@ -18,7 +18,7 @@
             align-items: center;
             margin-bottom: 10px;
             padding: 0px 20px;
-            & span {
+            & > span {
                 display: flex;
                 align-items: center;
                 justify-content: center;
