--- a/client/src/components/lesson/ReportLessonModel.scss
+++ b/client/src/components/lesson/ReportLessonModel.scss
@@ -16,4 +16,16 @@
             color: $color-text;
         }
     }
+    &__empty{
+        &-img{
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            margin-bottom: 30px;
+        }
+        &-title{
+            font-size: 1.8rem;
+            color: crimson;
+        }
+    }
 }
