--- a/client/src/pages/identifie/index.scss
+++ b/client/src/pages/identifie/index.scss
@@ -1,18 +1,25 @@
+@import "../../stylesSass/variables";
+
 .identifie {
     &__body {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-start;
         padding: 50px;
-        flex-direction: column;
     }
     &__camera {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 800px;
-        height: 800px;
+        width: 80%;
+        height: 600px;
         position: relative;
+        border: 1px solid $border-color;
+        border-radius: 2px;
+        & video {
+            width: 100%;
+            height: 100%;
+        }
         & canvas {
             position: absolute;
             top: 50%;
